# euroc_video

./: .gitignore  README.md
experiments/exp-2015-03-13_17-59-00/: cram_log.owl
experiments/exp-2015-03-13_18-09-47/: cram_log.owl
experiments/exp-2015-03-13_18-34-45/: cram_log.owl
experiments/exp-2015-03-13_18-48-15/: cram_log.owl
experiments/exp-2015-03-13_18-54-44/: cram_log.owl
experiments/exp-2015-03-13_19-01-45/: cram_log.owl
experiments/exp-2015-03-13_19-39-13/: cram_log.owl
experiments/exp-2015-03-13_19-43-51/: cram_log.owl
experiments/exp-2015-03-13_19-47-41/: cram_log.owl
experiments/exp-2015-03-13_20-04-42/: cram_log.owl
experiments/exp-2015-03-13_20-12-54/: cram_log.owl
experiments/exp-2015-03-13_20-44-16/: cram_log.owl
experiments/exp-2015-03-13_20-58-05/: cram_log.owl
experiments/exp-2015-03-13_21-19-25/: cram_log.owl
experiments/exp-2015-03-13_21-28-09/: cram_log.owl
experiments/exp-2015-03-13_21-35-18/: cram_log.owl
experiments/exp-2015-03-13_21-53-05/: cram_log.owl
experiments/exp-2015-03-24_12-50-15/: cram_log.owl
experiments/exp-2015-03-24_12-52-36/: cram_log.owl
experiments/exp-2015-03-24_12-54-41/: cram_log.owl
experiments/exp-2015-03-24_13-06-02/: cram_log.owl
experiments/exp-2015-03-24_13-13-31/: cram_log.owl
experiments/exp-2015-03-24_13-18-19/: cram_log.owl
experiments/exp-2015-03-24_13-31-27/: cram_log.owl
experiments/exp-2015-03-24_13-36-08/: cram_log.owl
experiments/exp-2015-03-24_13-41-35/: cram_log.owl
experiments/exp-2015-03-24_13-51-34/: cram_log.owl
experiments/exp-2015-03-24_14-02-40/: cram_log.owl
experiments/exp-2015-03-24_14-06-40/: cram_log.owl
experiments/exp-2015-03-24_14-27-49/: cram_log.owl
experiments/exp-2015-03-24_14-57-41/: cram_log.owl
experiments/exp-2015-03-24_15-02-32/: cram_log.owl
experiments/exp-2015-03-24_15-38-27/: cram_log.owl
experiments/exp-2015-03-24_15-50-29/: cram_log.owl
experiments/exp-2015-03-24_16-33-27/: cram_log.owl
experiments/exp-2015-03-24_18-04-42/: cram_log.owl
experiments/exp-2015-03-31_12-52-07/: cram_log.owl
experiments/exp-2015-03-31_14-39-53/: cram_log.owl
experiments/exp-2015-03-31_14-49-41/: cram_log.owl
experiments/exp-2015-03-31_14-57-28/: cram_log.owl
experiments/exp-2015-03-31_15-04-43/: cram_log.owl
experiments/exp-2015-03-31_15-23-00/: cram_log.owl
experiments/exp-2015-03-31_15-44-42/: cram_log.owl
experiments/exp-2015-03-31_16-07-32/: cram_log.owl
experiments/exp-2015-03-31_16-14-50/: cram_log.owl
experiments/exp-2015-03-31_16-29-32/: cram_log.owl
experiments/exp-2015-03-31_17-37-00/: cram_log.owl
experiments/exp-2015-03-31_17-44-23/: cram_log.owl
experiments/exp-2015-04-10_14-42-55/: cram_log.owl
experiments/exp-2015-04-10_14-57-39/: cram_log.owl
experiments/exp-2015-04-14_11-53-07/: cram_log.owl
gazebo_model_state_publisher/: CMakeLists.txt  package.xml
gazebo_model_state_publisher/msg/: NamedPoseStamped.msg
gazebo_model_state_publisher/scripts/: gazebo_model_state_startup.py
gazebo_model_state_publisher/src/: gazebo_model_state_publisher_node.cpp
knowrob_mango/: .gitignore  CMakeLists.txt  build.gradle  package.xml  settings.gradle
knowrob_mango/prolog/: init.pl  knowrob_mango.pl
mongodb_play/: CMakeLists.txt  package.xml
mongodb_play/include/mongodb_play/: db_player.h  gazebo_to_tf_player.h  image_player.h  jointstate_player.h  mongodb_play.h  string_player.h  tf_player.h
mongodb_play/scripts/: pub_strings.py  pub_tf.py
mongodb_play/src/: db_player.cpp  gazebo_to_tf_player.cpp  image_player.cpp  jointstate_player.cpp  mongodb_play.cpp  string_player.cpp  tf_player.cpp
robocop/: .gitignore  CMakeLists.txt  demotest.json  format.json  package.xml  settings.gradle
robocop/launch/: robocop.launch  video_all.launch
robocop/prolog/: init.pl  testhelper.pl  testrobocop.pl
robocop/robocop/: build.gradle
robocop/robocop/src/main/java/de/suturo/video/robocop/: RobocopServer.java  StubTest.java
robocop/robocop/src/main/java/de/suturo/video/robocop/query/: AllSolutionsCommand.java  HasMoreSolutionsCommand.java  JSONQuery.java  NextSolutionCommand.java  QueryCommand.java  ResetCommand.java  ThreadedQuery.java
robocop/robocop/src/main/java/de/suturo/video/robocop/solutions/: PrologAllSolutions.java  PrologIncrementalSolutions.java  PrologSolutions.java
robocop/robocop/src/main/java/de/suturo/video/robocop/tests/: CopTest.java  CopTestSuite.java  ParseException.java
robocop/robocop/src/main/java/de/suturo/video/robocop/types/: Time.java
robocop/robocop/test/main/java/de/suturo/video/robocop/: RobocopTestTests.java
robocop/scripts/: robocop_server
robot_description_mongo_logger/: CMakeLists.txt  package.xml
robot_description_mongo_logger/src/: robot_description_mongo_logger_node.cpp
test_data/: exp-2016-des.json  exp-2016-img.json  exp-2016-sys.json  exp-2016-tf.json  tests_ms6.json
using_markers/: CMakeLists.txt  package.xml
vader/: CMakeLists.txt  package.xml  plugin_description.xml
video_panel_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
voldemort/: CMakeLists.txt  package.xml
(+40 files in other folders)
