<?xml version="1.0"?>
<package>
  <name>mongodb_play</name>
  <version>0.0.0</version>
  <description>The mongodb_play package</description>

  <maintainer email="ai-euroc-video@tzi.de">Jannik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>suturo_video_msgs</build_depend>
  <build_depend>mongodb</build_depend>
  <build_depend>mongodb-dev</build_depend>

  <run_depend>suturo_video_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>mongodb-dev</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>

  <export>
  </export>
</package>
