<?xml version="1.0"?>
<package>
  <name>robocop</name>
  <version>1.0.0</version>
  <description>A test framework for automatic experiment evaluation based on knowrob, json_prolog and rosprolog.
  </description>

  <maintainer email="mhorst@cs.uni-bremen.de">Moritz Horstmann</maintainer>

  <license>LGPL</license>

  <author>SUTURO video group</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosprolog</build_depend>
  <build_depend>knowrob_common</build_depend>

  <run_depend>rosprolog</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_mango</run_depend>
  
</package>
